<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.MainActivity">

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_status" />

    <TextView
        tools:text="Disconnected"
        android:id="@+id/tvConnectionStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/curtain_state" />

    <TextView
        tools:text="Closed"
        android:id="@+id/tvCurtainState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/switchManualAuto"
        android:text="@string/switch_auto_mode"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.ButtonBarLayout
        style="?android:attr/buttonBarStyle"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/buttonOpen"
            android:onClick="autoOpen"
            android:text="@string/open_curtains"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="52dp" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/buttonClose"
            android:text="@string/close_curtains"
            android:onClick="autoClose"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="52dp" />
    </android.support.v7.widget.ButtonBarLayout>

    <android.support.v7.widget.RecyclerView
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical"
        android:id="@+id/recyclerViewHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
